query UniformLocations once and store

--- a/WavefrontOBJViewer/TODO.txt
+++ b/WavefrontOBJViewer/TODO.txt
@@ -11,6 +11,8 @@
 
 - add CPU frustrum culling based on bounding sphere
 
+- add threaded rendering (so it renders during window move/resize)
+
 - add "HUD projection sprites" in 3d view
 - TEST: world-space hierarchy transform (parent an object under the light?)
 
