--- a/WavefrontOBJViewer/TODO.txt
+++ b/WavefrontOBJViewer/TODO.txt
@@ -9,8 +9,12 @@
 *  TODO NEXT
 *
 
-- cross-platform 2d rasterization (AGG?)
-  - resolve origin (GDI upper-left, 
+- cross-platform 2d rasterization ( agg-sharp ? )
+  - (done) AGG: resolve text orientation to match GDI
+  - make convenience implicit-casts for size/color/etc
+    - http://msdn.microsoft.com/en-us/library/09479473.aspx
+  - consider making GDI-GraphicsContext work-alike
+  - C https://github.com/micahpearlman/MonkVG
 
 - add generic "HUD projection sprites" in 3d view
 
